# lucidamod

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-onnx.txt  requirements.txt  run.bat  run_onnx_web.bat  setup.bat
benchmark/: gallery.py  ideogram.py  metrics.py  run.py  testset.py
bgr/: cli.py  compositing.py  decontaminate.py  pipeline.py  refiner.py  registry.py  segmenter.py
data/: train_sources.json
data/testset/: manifest.jsonl
docs/: benchmark-results.md  benchmark.md  docker.md  onnx.md
docs/reports/: 2026-07-baseline-gap-analysis.md  2026-07-faz1-ablation.md  2026-07-faz2-veri.md
docs/superpowers/plans/: 2026-07-09-faz0-baseline-benchmark.md  2026-07-09-faz1-pipeline.md  2026-07-09-faz2-veri.md
docs/superpowers/specs/: 2026-07-09-bg-remover-design.md
scripts/: benchmark_v1.sh  build_testset.py  build_trainset.py  check_web_onnx.py  compare_v1.py  convert_onnx_fp16.py  deform_conv_web.py  export_birefnet.py  export_lucida_onnx.py  fetch_ideogram.py  infer.py  make_composites.py  make_textfx.py  make_v6_copies.py  optimize_webgpu_concat.py  relabel_disvd.py  score_ideogram.py  serve_onnx_web.py  test_deform_conv_web.py  validate_lucida_onnx.py
serving/: app.py
serving/static/: index.html
tests/: conftest.py  test_build_testset.py  test_build_trainset.py  test_cli.py  test_compare_v1.py  test_compositing.py  test_decontaminate.py  test_export_birefnet.py  test_gallery.py  test_ideogram.py  test_make_composites.py  test_make_textfx.py  test_make_v6_copies.py  test_metrics.py  test_pipeline.py  test_refiner.py  test_registry.py  test_run.py  test_sanity.py  test_score_ideogram.py  test_segmenter.py  test_serving.py  test_testset.py  test_train_colab_lib.py  test_train_colab_notebook.py
training/: colab_bitirici_hucresi.py  colab_devam_hucresi.py  egitim_hucresi_fix.md  prepare_data_colab.ipynb  train_colab.ipynb  train_colab_lib.py  v3_veri_guncelleme_hucresi.py  v4_veri_guncelleme_hucresi.py  v6_veri_guncelleme_hucresi.py  veri_tar_paketleme_hucresi.py
training/hucre_arsivi/: README.md  bekleme_hucresi.md  onarim_hucresi.md  paralel_kopya_hucresi.md
web_onnx/: app.js  foreground.js  index.html  model-sw.js
