[project]
name = "my-bg-remover"
version = "0.1.0"
description = "Ideogram seviyesinde background remover"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "torchvision",
    "transformers>=4.44",
    "timm",
    "einops",
    "kornia",
    "pillow>=10",
    "numpy>=1.26",
    "scipy>=1.12",
    "huggingface-hub>=0.24",
    "fal-client>=0.4",
    "requests",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
